--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "socket.io": "^4.6.1",
     "axios": "^1.6.0",
     "agora-access-token": "^2.0.4",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.6.0",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
